# hmin322-idc-3D

./: .gitignore  CMakeLists.txt  README.md
tp/: main.cpp
